--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ git:
 env:
   global:
   - AWS_DEFAULT_REGION=us-east-2
+  - MESSAGEROUTERNODEINSTANCETYPE=t2.small
   
 before_install:
   - echo "Installing AWS CLI"
@@ -21,14 +22,15 @@ before_install:
 install: true
 
 script:
-  - aws cloudformation validate-template --template-body file://templates/solace-vmr-master.template
-  - aws cloudformation validate-template --template-body file://templates/solace-vmr.template
+  - aws cloudformation validate-template --template-body file://templates/solace-master.template
+  - aws cloudformation validate-template --template-body file://templates/solace.template
   - aws cloudformation validate-template --template-body file://templates/nodecreate.template
   - yaml-lint -n templates/
   - sed -i "s@SolaceDockerURLParameterValue@$SOLACE_DOCKER_URL_PARAMETER_VALUE@g" ci/solace-aws-ha-3az-prod-travistest.json
+  - sed -i "s@MessageRouterNodeInstanceTypeParameterValue@$MESSAGEROUTERNODEINSTANCETYPE@g" ci/solace-aws-ha-3az-prod-travistest.json
   - aws s3 mb s3://solace-cf-quickstart-travistest || echo "s3 bucket already existed"
   - aws s3 sync . s3://solace-cf-quickstart-travistest/solace/vmr/latest --acl public-read
-  - aws cloudformation create-stack --stack-name vmr-ha-travistest --template-body file://templates/solace-vmr-master.template --parameters file://ci/solace-aws-ha-3az-prod-travistest.json --on-failure DELETE --capabilities CAPABILITY_IAM
+  - aws cloudformation create-stack --stack-name vmr-ha-travistest --template-body file://templates/solace-master.template --parameters file://ci/solace-aws-ha-3az-prod-travistest.json --on-failure DELETE --capabilities CAPABILITY_IAM
   - echo "Waiting for stack create complete"
   - "travis_wait 30 sleep 1800 &"
   - until aws cloudformation describe-stacks --stack-name vmr-ha-travistest | grep -m 1 -E 'CREATE_COMPLETE|DELETE_IN_PROGRESS'; do sleep 10; done
@@ -52,3 +54,4 @@ after_script:
   - echo "Waiting for stack delete complete"
   - stackid="$(aws cloudformation describe-stacks --stack-name vmr-ha-travistest | grep StackId | awk -F '"' '{print $4}')"
   - if [ -n "$stackid" ]; then until aws cloudformation describe-stacks --stack-name $stackid | grep -m 1 "DELETE_COMPLETE"; do sleep 10; done; fi
+
