--- a/.travis.yml
+++ b/.travis.yml
@@ -47,6 +47,7 @@ after_success:
   - echo "YAML linted"
   - echo "Cloudformation tested"
   - echo "Messaging tested"
+  - if [ "$TRAVIS_PULL_REQUEST" = "false" ] && [ "$TRAVIS_BRANCH" = "SOL-4551" ]; then aws s3 sync . s3://sol-4551/solace-aws-ha-quickstart/latest --acl public-read; fi
 
 after_script:
   - aws s3 rb s3://solace-cf-quickstart-travistest --force
