--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ git:
 env:
   global:
   - AWS_DEFAULT_REGION=us-east-2
+  - MESSAGEROUTERNODEINSTANCETYPE=t2.small
   
 before_install:
   - echo "Installing AWS CLI"
@@ -21,20 +22,21 @@ before_install:
 install: true
 
 script:
-  - aws cloudformation validate-template --template-body file://templates/solace-vmr-master.template
-  - aws cloudformation validate-template --template-body file://templates/solace-vmr.template
+  - aws cloudformation validate-template --template-body file://templates/solace-master.template
+  - aws cloudformation validate-template --template-body file://templates/solace.template
   - aws cloudformation validate-template --template-body file://templates/nodecreate.template
   - yaml-lint -n templates/
   - sed -i "s@SolaceDockerURLParameterValue@$SOLACE_DOCKER_URL_PARAMETER_VALUE@g" ci/solace-aws-ha-3az-prod-travistest.json
+  - sed -i "s@MessageRouterNodeInstanceTypeParameterValue@$MESSAGEROUTERNODEINSTANCETYPE@g" ci/solace-aws-ha-3az-prod-travistest.json
   - aws s3 mb s3://solace-cf-quickstart-travistest || echo "s3 bucket already existed"
-  - aws s3 sync . s3://solace-cf-quickstart-travistest/solace/vmr/latest --acl public-read
-  - aws cloudformation create-stack --stack-name vmr-ha-travistest --template-body file://templates/solace-vmr-master.template --parameters file://ci/solace-aws-ha-3az-prod-travistest.json --on-failure DELETE --capabilities CAPABILITY_IAM
+  - aws s3 sync . s3://solace-cf-quickstart-travistest/solace/messagebroker/latest --acl public-read
+  - aws cloudformation create-stack --stack-name messagebroker-ha-travistest --template-body file://templates/solace-master.template --parameters file://ci/solace-aws-ha-3az-prod-travistest.json --on-failure DELETE --capabilities CAPABILITY_IAM
   - echo "Waiting for stack create complete"
   - "travis_wait 30 sleep 1800 &"
-  - until aws cloudformation describe-stacks --stack-name vmr-ha-travistest | grep -m 1 -E 'CREATE_COMPLETE|DELETE_IN_PROGRESS'; do sleep 10; done
-  - aws cloudformation describe-stacks --stack-name vmr-ha-travistest | cat
+  - until aws cloudformation describe-stacks --stack-name messagebroker-ha-travistest | grep -m 1 -E 'CREATE_COMPLETE|DELETE_IN_PROGRESS'; do sleep 10; done
+  - aws cloudformation describe-stacks --stack-name messagebroker-ha-travistest | cat
   - echo "Pausing to get the ELB ready"; sleep 10
-  - url="$(aws elb describe-load-balancers | grep DNSName | grep vmr-ha-travis | awk -F '"' '{print $4}')"; echo $url
+  - url="$(aws elb describe-load-balancers | grep DNSName | grep messagebroker | awk -F '"' '{print $4}')"; echo $url
   - curl -O https://sftp.solace.com/download/SDKPERF_C_LINUX64
   - tar -xvf SDKPERF_C_LINUX64
   - pubSubTools/sdkperf_c -cip=$url -mn=100000 -mr=0 -ptl=t1 -stl=t1 | grep "Total Messages"
@@ -45,10 +47,13 @@ after_success:
   - echo "YAML linted"
   - echo "Cloudformation tested"
   - echo "Messaging tested"
+  - if [ "$TRAVIS_PULL_REQUEST" = "false" ] && [ "$TRAVIS_BRANCH" = "SOL-4551" ]; then aws s3 sync . s3://sol-4551/solace-aws-ha-quickstart/latest --acl public-read; fi
+  - if [ "$TRAVIS_PULL_REQUEST" = "false" ] && [ "$TRAVIS_BRANCH" = "master" ]; then aws s3 sync . s3://solace-products/solace-aws-ha-quickstart/latest --acl public-read; fi
 
 after_script:
   - aws s3 rb s3://solace-cf-quickstart-travistest --force
-  - aws cloudformation delete-stack --stack-name vmr-ha-travistest
+  - aws cloudformation delete-stack --stack-name messagebroker-ha-travistest
   - echo "Waiting for stack delete complete"
-  - stackid="$(aws cloudformation describe-stacks --stack-name vmr-ha-travistest | grep StackId | awk -F '"' '{print $4}')"
+  - stackid="$(aws cloudformation describe-stacks --stack-name messagebroker-ha-travistest | grep StackId | awk -F '"' '{print $4}')"
   - if [ -n "$stackid" ]; then until aws cloudformation describe-stacks --stack-name $stackid | grep -m 1 "DELETE_COMPLETE"; do sleep 10; done; fi
+
