--- a/templates/solace-master.template
+++ b/templates/solace-master.template
@@ -67,7 +67,7 @@
                     "default": "Solace Docker URL"
                 },
                 "AdminPassword": {
-                    "default": "Password to access SolOS admin console and SEMP"
+                    "default": "Password to access Solace admin console and SEMP"
                 },
                 "ContainerLoggingFormat": {
                     "default": "Container logging format"
@@ -93,6 +93,12 @@
                 "KeyPairName": {
                     "default": "Key Pair Name"
                 },
+                "SSHAccessCIDR": {
+                    "default": "Permitted IP range for console ssh access"
+                },
+                "RemoteAccessCIDR": {
+                    "default": "Allowed External Access CIDR"
+                },
                 "CreatePrivateSubnets": {
                     "default": "Create production ready enviroment"
                 },
@@ -107,11 +113,11 @@
     },
     "Parameters": {
         "SolaceDockerURL": {
-            "Description": "URL to Solace Docker Image obtained via registration here: http://dev.solace.com/downloads/download_vmr-ce-docker",
+            "Description": "Download URL to Solace PubSub+ Docker Image obtained here: http://dev.solace.com/downloads/",
             "Type": "String"
         },
         "AdminPassword": {
-            "Description": "Require password to access SolOS admin console and SEMP",
+            "Description": "Password to allow Solace admin access to configure the message broker instances",
             "Type": "String",
             "NoEcho": "True"
         },
@@ -124,11 +130,11 @@
             ],
             "ConstraintDescription": "Must be a valid container logging format.",
             "Default": "graylog",
-            "Description": "Solace VMR logging format in CloudWatch",
+            "Description": "Solace message broker logging format in CloudWatch",
             "Type": "String"
         },
         "AvailabilityZones": {
-            "Description": "List of Availability Zones to use for the subnets in the VPC. Note: The logical order is preserved. The number of zones to choose should be equal to 'Number of Availability Zones' previously specified",
+            "Description": "List of Availability Zones to use for the subnets in the VPC. Note: The logical order is preserved. The number of zones to choose must be equal to 'Number of Availability Zones' previously specified",
             "Type": "List<AWS::EC2::AvailabilityZone::Name>"
         },
         "NumberOfAZs": {
@@ -151,19 +157,25 @@
         },
         "MessageRouterNodeInstanceType": {
             "AllowedValues": [
+                "t2.small",
+                "t2.medium",
                 "t2.large",
                 "t2.xlarge",
+                "t2.2xlarge",
                 "m3.large",
                 "m3.xlarge",
                 "m4.large",
                 "m4.xlarge",
                 "m4.2xlarge",
                 "m4.4xlarge",
-                "c4.xlarge"
+                "m5.large",
+                "m5.xlarge",
+                "m5.2xlarge",
+                "m5.4xlarge"
             ],
             "ConstraintDescription": "Must be a valid EC2 instance type.",
-            "Default": "t2.large",
-            "Description": "Instance Type for Solace Message Router. Note: Make sure that your region supports the selected instance type before continuing",
+            "Default": "m4.large",
+            "Description": "Instance Type for Solace message broker message routing nodes. Note: Make sure that your region supports the selected instance type before continuing",
             "Type": "String"
         },
         "MessageRouterNodeStorage": {
@@ -208,18 +220,17 @@
         },
         "MonitorNodeInstanceType": {
             "AllowedValues": [
+                "t2.micro",
+                "t2.small",
                 "t2.medium",
                 "t2.large",
                 "t2.xlarge",
-                "m3.large",
-                "m3.xlarge",
                 "m4.large",
-                "m4.xlarge",
-                "c4.xlarge"
+                "m5.large"
             ],
             "ConstraintDescription": "Must be a valid EC2 instance type.",
-            "Default": "t2.large",
-            "Description": "Instance Type for Solace Message Router. Note: Make sure that your region supports the selected instance type before continuing",
+            "Default": "t2.micro",
+            "Description": "Instance Type for Solace message broker monitoring node. Note: Make sure that your region supports the selected instance type before continuing",
             "Type": "String"
         },
         "QSS3BucketName": {
@@ -376,7 +387,7 @@
             "Properties": {
                 "TemplateURL": {
                     "Fn::Sub": [
-                        "https://${QSS3BucketName}.${QSS3Region}.amazonaws.com/${QSS3KeyPrefix}templates/solace-vmr.template",
+                        "https://${QSS3BucketName}.${QSS3Region}.amazonaws.com/${QSS3KeyPrefix}templates/solace.template",
                         {
                             "QSS3Region": {
                                 "Fn::If": [
