Naming consistency updates

--- a/templates/solace-master.template
+++ b/templates/solace-master.template
@@ -37,11 +37,11 @@
                 },
                 {
                     "Label": {
-                        "default": "Message Router Instance Configuration"
+                        "default": "Message Broker Instance Configuration"
                     },
                     "Parameters": [
-                        "MessageRouterNodeInstanceType",
-                        "MessageRouterNodeStorage"
+                        "MessageBrokerNodeInstanceType",
+                        "MessageBrokerNodeStorage"
                     ]
                 },
                 {
@@ -81,10 +81,10 @@
                 "BootDiskSize": {
                     "default": "Boot Disk Capacity (GiB)"
                 },
-                "MessageRouterNodeInstanceType": {
+                "MessageBrokerNodeInstanceType": {
                     "default": "Instance Type"
                 },
-                "MessageRouterNodeStorage": {
+                "MessageBrokerNodeStorage": {
                     "default": "Persistent Storage"
                 },
                 "MonitorNodeInstanceType": {
@@ -156,7 +156,7 @@
             "MinValue": "8",
             "Type": "Number"
         },
-        "MessageRouterNodeInstanceType": {
+        "MessageBrokerNodeInstanceType": {
             "AllowedValues": [
                 "t2.small",
                 "t2.medium",
@@ -179,7 +179,7 @@
             "Description": "Instance Type for Solace message broker message routing nodes. Note: Make sure that your region supports the selected instance type before continuing",
             "Type": "String"
         },
-        "MessageRouterNodeStorage": {
+        "MessageBrokerNodeStorage": {
             "ConstraintDescription": "No more than 640 GiB per device.",
             "Default": "0",
             "Description": "Allocated EBS storage for each block device (in GiB); 0 indicates ephemeral storage only. Non-zero will cause a new io1 disk creation for message-spool which will NOT be deleted on stack termination",
@@ -416,11 +416,11 @@
                     "BootDiskSize": {
                         "Ref": "BootDiskSize"
                     },
-                    "MessageRouterNodeInstanceType": {
-                        "Ref": "MessageRouterNodeInstanceType"
+                    "MessageBrokerNodeInstanceType": {
+                        "Ref": "MessageBrokerNodeInstanceType"
                     },
-                    "MessageRouterNodeStorage": {
-                        "Ref": "MessageRouterNodeStorage"
+                    "MessageBrokerNodeStorage": {
+                        "Ref": "MessageBrokerNodeStorage"
                     },
                     "MonitorNodeInstanceType": {
                         "Ref": "MonitorNodeInstanceType"
